@@ -1,9 +1,9 @@
 # PPC G4 on MacOS X 10.4
-TARGETOS = ppc-apple-macosx
-HOSTOS = ppc-apple-macosx
+TARGETOS = unified-apple-macosx
+HOSTOS = unified-apple-macosx
 
 # an old readline version is installed on the machine,
 # so I had to install new one (readline-5.2) to $(HOME)/local-$(HOSTNAME)
-TARGETLDFLAGS = "-L$(HOME)/local-$(HOSTNAME)/lib"
-TARGETCXXFLAGS = "-I$(HOME)/local-$(HOSTNAME)/include"
-TARGETCFLAGS = "-I$(HOME)/local-$(HOSTNAME)/include"
+TARGETLDFLAGS = "-isysroot /Developer/SDKs/MacOSX10.4u.sdk -arch i386 -arch ppc -L$(HOME)/local-$(HOSTNAME)/lib"
+TARGETCXXFLAGS = "-O2 -isysroot /Developer/SDKs/MacOSX10.4u.sdk -arch i386 -arch ppc -I$(HOME)/local-$(HOSTNAME)/include"
+TARGETCFLAGS = "-O2 -isysroot /Developer/SDKs/MacOSX10.4u.sdk -arch i386 -arch ppc -I$(HOME)/local-$(HOSTNAME)/include"
